Fixing my code, removing extra space from sidebar menu

--- a/web/wp-content/themes/lfevents/src/assets/scss/modules/_multi-part-page.scss
+++ b/web/wp-content/themes/lfevents/src/assets/scss/modules/_multi-part-page.scss
@@ -89,6 +89,6 @@
   left: 0;
 
   @include breakpoint(large) {
-    top: -8.5rem;
+    top: -7rem;
   }
 }
